# uri3

./: CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
.registry/: capability_index.json  operation_index.json  uri_index.json
contracts/: resources.yaml  views.yaml
docs/: rfc-nl-log-decision-pipeline.md
domains/weather_map/: README.md
examples/: nl-log-decision.uri.flow.yaml
schemas/: runtime_environments.schema.json  uri_exchange.schema.json  uri_graph.schema.json  workflow_graph.schema.json
scripts/: run_uri3_workflow.py
tests/: __init__.py  conftest.py  test_browser_adapter.py  test_dispatch.py  test_doctor.py  test_envelope_migrate.py  test_lifecycle_envelope.py  test_llm_plan.py  test_nl_log_decision.py  test_replay.py  test_result_envelope.py  test_schema.py  test_semantic_routing.py  test_service_result.py  test_workflow_conditions.py  test_workflow_executor.py  test_workflow_graph.py
uri3/: paths.py
uri3/cli/: helpers.py  main.py
uri3/config/: cli_shortcuts.py  docker_stacks.py  llm_profile_builder.py  llm_profiles.py  repo_root.py  ssh_auth.py  uri_yaml.py
uri3/doctor/: __init__.py  boundary_scanner.py
uri3/graph/: __init__.py  conditions.py  dependency_graph.py  event_emitter.py  event_log.py  execution_models.py  execution_plan.py  graph_executor.py  graph_serializer.py  models.py  operation_registry.py  payload_context.py  policy.py  replay.py  step_runner.py
uri3/llm/: __init__.py  decide.py  plan.py
uri3/resolvers/: docker_resolver.py  env_resolver.py  explain_verification.py  registry.py  resolve_core.py  router.py  (+1 more)
(+19 files in other folders)
